--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -728,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Errors should never pass silently."
+    "## 10. Errors should never pass silently / Los errores nunca deberían pasar silenciosamente."
    ]
   },
   {
