Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -735,7 +735,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11.  Unless explicitly silenced."
+    "## 11.  Unless explicitly silenced / A menos que se silencien explícitamente.."
    ]
   },
   {
