Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -742,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12. In the face of ambiguity, refuse the temptation to guess"
+    "## 12. In the face of ambiguity, refuse the temptation to guess / Frente a la ambigüedad, evitar la tentación de adivinar"
    ]
   },
   {
