Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -749,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13. There should be one-- and preferably only one --obvious way to do it."
+    "## 13. There should be one-- and preferably only one --obvious way to do it / Debería haber una, y preferiblemente solo una, manera obvia de hacerlo."
    ]
   },
   {
