Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -756,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 14. Although that way may not be obvious at first unless you're Dutch."
+    "## 14. Although that way may not be obvious at first unless you're Dutch Y/ A pesar de que esa manera no sea obvia a menos que seas Holandés."
    ]
   },
   {
