--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -763,7 +763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15. Now is better than never.\n"
+    "## 15. Now is better than never / Ahora es mejor que nunca.\n"
    ]
   },
   {
