Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -770,7 +770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 16. Although never is often better than *right* now."
+    "## 16. Although never is often better than *right* now / A pesar de que nunca es muchas veces mejor que *ahora* mismo."
    ]
   },
   {
