--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -777,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 17. If the implementation is hard to explain, it's a bad idea."
+    "## 17. If the implementation is hard to explain, it's a bad idea / Si la implementación es difícil de explicar, es una mala idea.."
    ]
   },
   {
