Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -784,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18. If the implementation is easy to explain, it may be a good idea."
+    "## 18. If the implementation is easy to explain, it may be a good idea / Si la implementación es fácil de explicar, puede que sea una buena idea."
    ]
   },
   {
