Update El zen de python.ipynb

--- a/El zen de python.ipynb
+++ b/El zen de python.ipynb
@@ -791,7 +791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 19. Namespaces are one honking great idea -- let's do more of those"
+    "## 19. Namespaces are one honking great idea -- let's do more of those / Los espacios de nombres son una gran idea, ¡tengamos más de esos!"
    ]
   }
  ],
